k8s/teledoist-blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teledoist-blog
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - teledoist.paulbuzakov.com
      secretName: teledoist-blog-ingress-tls
  rules:
    - host: teledoist.paulbuzakov.com
      http:
        paths:
          - backend:
              service:
                name: teledoist-blog
                port:
                  number: 80
            path: /
            pathType: Exact
